# vibechad-vidz

./: CMakeLists.txt  PKGBUILD  README.md  build.sh
config/: default.toml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  analysis_ghosting.md  codebase_index.md  plan_fix_ghosting.md
resources/: vibechad.desktop  vibechad.qrc
resources/styles/: dark.qss  gruvbox.qss  nord.qss
scripts/: install_projectm_v4_local.sh  setup-arch.sh
src/: main.cpp
src/audio/: AudioAnalyzer.cpp  AudioAnalyzer.hpp  AudioEngine.cpp  AudioEngine.hpp  MediaMetadata.cpp  MediaMetadata.hpp  Playlist.cpp  Playlist.hpp
src/core/: Application.cpp  Application.hpp  Config.cpp  Config.hpp  Logger.cpp  Logger.hpp
src/overlay/: OverlayConfig.cpp  OverlayConfig.hpp  OverlayEngine.cpp  OverlayEngine.hpp  TextAnimator.cpp  TextAnimator.hpp  TextElement.cpp  TextElement.hpp
src/recorder/: EncoderSettings.cpp  EncoderSettings.hpp  FrameGrabber.cpp  FrameGrabber.hpp  VideoRecorder.cpp  VideoRecorder.hpp
src/ui/: MainWindow.cpp  MainWindow.hpp  OverlayEditor.cpp  OverlayEditor.hpp  PlayerControls.cpp  PlayerControls.hpp  PlaylistView.cpp  PlaylistView.hpp  PresetBrowser.cpp  PresetBrowser.hpp  RecordingControls.cpp  RecordingControls.hpp  SettingsDialog.cpp  SettingsDialog.hpp  VisualizerPanel.cpp  VisualizerPanel.hpp
src/util/: FileUtils.cpp  FileUtils.hpp  GLIncludes.hpp  Result.hpp  Signal.hpp  Types.hpp
src/visualizer/: PresetManager.cpp  PresetManager.hpp  ProjectMBridge.cpp  ProjectMBridge.hpp  RenderTarget.cpp  RenderTarget.hpp  VisualizerWidget.cpp  VisualizerWidget.hpp
